cleanup, adding junk email message, added output submission history